# WhatStyle_WhatsAppInYourStyle

./: .env.example  .gitignore  README.md  WHITEPAPER.md  pyproject.toml  requirements.txt
app/: main.py
app/db/cassandra/: connection.py
app/db/cassandra/repositories/: user_repo.py
app/db/vector/: vector_operations.py
app/grpc/protos/: mcp_service.proto
app/grpc_services/: health_client.py  health_server.py  server.py
app/grpc_services/protos/: analytics_service.proto  health.proto  mcp_service.proto  tone_service.proto
app/grpc_services/services/: health_service.py  mcp_service.py  tone_service.py
app/models/: conversation.py  tone.py  user.py
