[project]
name = "whatstyle-whatsappinyourstyle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles",
    "aiohttp",
    "aiokafka",
    "bcrypt",
    "black",
    "cassandra-driver",
    "click",
    "colorlog",
    "confluent-kafka",
    "email-validator",
    "factory-boy",
    "fastapi[all]",
    "findspark",
    "flake8",
    "googleapis-common-protos",
    "grpcio",
    "grpcio-status",
    "grpcio-tools",
    "gunicorn",
    "hiredis",
    "httpx",
    "isort",
    "kafka-python",
    "mistralai",
    "mkdocs",
    "mkdocs-material",
    "mypy",
    "numpy",
    "openai",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "pandas",
    "passlib[bcrypt]",
    "pre-commit",
    "prometheus-client",
    "protobuf",
    "py4j",
    "pydantic",
    "pydantic-settings",
    "pyspark",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "python-dateutil",
    "python-dotenv",
    "python-jose[cryptography]",
    "python-multipart",
    "pytz",
    "pyyaml",
    "redis",
    "requests",
    "rich",
    "scikit-learn",
    "sentence-transformers",
    "starlette",
    "structlog",
    "torch",
    "transformers",
    "typer",
    "urllib3",
    "uvicorn[standard]",
    "websockets",
]
